--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </header>
     <main>
       <!-- Student code goes here -->
+       <section>
+        <h2>html</h2>
+       </section>
     </main>
 
     <footer>
