--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       </section>
    
       <section class="card" id="javascript-section">
-   
       </section>
 
        <section>
         <h2>JavaScript</h2>
-        <li> notes here</li>
+        <li> A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script</li>
        </section>
     </main>
 
